--- a/src/components/MovieCard/MovieCard.scss
+++ b/src/components/MovieCard/MovieCard.scss
@@ -2,6 +2,11 @@
 
 .card-item {
   cursor: pointer;
+  transition: all 0.3s;
+  &:hover {
+    transform: scale(1.1);
+    transition: all 0.3s;
+  }
 }
 
 .card-top {
